# Mycqu_Service

./: .dockerignore  .drone.yml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  main.py  pyproject.toml  requirements.txt
proto/mycqu_service/: mycqu_model.proto  mycqu_request_response.proto
servicers/: CardServicer.py  LibraryServicer.py  MycquServicer.py
src/: card_service.rs  library_service.rs  main.rs  metrics.rs  mycqu_service.rs  utils.rs
test/: test_card_services.py  test_library_services.py  test_mycqu_services.py
utils/: configManager.py  handleMycquError.py  tencentSCF.py
utils/ClientManager/: CardClient.py  LibraryClient.py  MycquClient.py  _ClientManager.py  __init__.py
