[package]
name = "mycqu_service"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmycqu = { version = "0.2.1", features = ["card"] }
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
chrono = { version = "0.4" }
dashmap = "6.0"
rand = "0.9"
reqwest = "0.12"
serde = "1.0"

[build-dependencies]
tonic-prost-build = "*"
